--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Sombrerería Mil</title>
 </head>
 <body>
-    <h1>Tants caps tants barrets</h1>
-    <h1></h1>
+    <header>
+        <section>
+            
+        </section>
+        <section>
+
+        </section>
+    </header>
+        <h1>Tants caps tants barrets</h1>
 </body>
 </html>
