--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sombrerería Mil</title>
-    
+
 </head>
+
 <body>
     <header>
         <section>
-            
+
         </section>
         <section>
 
         </section>
     </header>
-        <h1>Tants caps tants barrets</h1>
+    <h1>Tants caps tants barrets</h1>
 </body>
+
 </html>
