--- a/index.html
+++ b/index.html
@@ -12,13 +12,21 @@
 <body>
     <header>
         <section>
+            <div>
 
+            </div>  
+            <div>
+                <img src="./img/logo.png" alt="logo">
+            </div>
+            <div>
+                <img src="./img/search.png" alt="search">
+                <img src="./img/shop.png" alt="shop">
+            </div>  
         </section>
         <section>
 
         </section>
     </header>
-    <h1>Tants caps tants barrets</h1>
 </body>
 
 </html>
