--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <section>
-            <div>
-
-            </div>  
+            <button>
+                <img src="./img/menu.png" alt="menu">
+            </button>  
             <div>
                 <img src="./img/logo.png" alt="logo">
             </div>
@@ -24,7 +24,14 @@
             </div>  
         </section>
         <section>
-
+            <div>
+                <img src="./img/principal.jpg" alt="principal">
+            </div>
+            <h1>tants caps tants barrets</h1>
+            <button>
+                <img src="" alt="">
+                <a href=""
+            </button>
         </section>
     </header>
 </body>
