--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             </div>
             <h1>tants caps tants barrets</h1>
             <button>
-                <img src="" alt="">
-                <a href=""
+                <a href="#">
+                    <img src="./img/flecha.png" alt="flecha">
+                </a>
             </button>
         </section>
     </header>
