--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sombrerería Mil</title>
-
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css"> 
 </head>
 
 <body>
     <header>
         <section>
             <button>
-                <img src="./img/menu.png" alt="menu">
+                <img src="./img/menu.png" class="imgMenu" alt="menu">
             </button>  
             <div>
-                <img src="./img/logo.png" alt="logo">
+                <img src="./img/logo.png" class="imgLogo" alt="logo">
             </div>
             <div>
-                <img src="./img/search.png" alt="search">
-                <img src="./img/shop.png" alt="shop">
+                <img src="./img/search.png" class="imgSearch" alt="search">
+                <img src="./img/shop.png" class="imgShop" alt="shop">
             </div>  
         </section>
         <section>
-            <div>
-                <img src="./img/principal.jpg" alt="principal">
+            <div class="ctPrincipal">
+                <img src="./img/principal.jpg" class="imgPrincipal" alt="principal">
             </div>
             <h1>tants caps tants barrets</h1>
             <button>
