--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
         <section>
             <div class="ctPrincipal">
-                <img src="./img/principal.jpg" class="imgPrincipal" alt="principal">
+                <img src="img/principalCompleta.jpg" class="imgPrincipal" alt="principal">
             </div>
             <h1>tants caps tants barrets</h1>
             <button>
