se ha aplicado flex a la sección 1 de header y se ha posicionado el h1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <section>
+        <section class="headerS1">
             <button>
                 <img src="./img/menu.png" class="imgMenu" alt="menu">
             </button>  
@@ -27,8 +27,8 @@
         <section>
             <div class="ctPrincipal">
                 <img src="img/principalCompleta.jpg" class="imgPrincipal" alt="principal">
+                <h1>tants caps tants barrets</h1>
             </div>
-            <h1>tants caps tants barrets</h1>
             <button>
                 <a href="#">
                     <img src="./img/flecha.png" alt="flecha">
