--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <img src="./img/logo.png" alt="logo">
             </div>
             <div>
-                <img src="./img/search.png" alt="search">
-                <img src="./img/shop.png" alt="shop">
+                <button><img src="./img/search.png" alt="search"></button>
+                <button><img src="./img/shop.png" alt="shop"></button>
             </div>  
         </section>
         <section>
@@ -36,5 +36,4 @@
         </section>
     </header>
 </body>
-
 </html>
