--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sombrerería Mil</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,16 +15,16 @@
         <section class="headerS1">
             <button class="buttonMenu">
                 <img src="./img/menu.png" class="imgMenu" alt="menu">
-            </button>  
+            </button>
             <div>
                 <img src="./img/logo.png" class="imgLogo" alt="logo">
             </div>
             <div>
                 <img src="./img/search.png" class="imgSearch" alt="search">
                 <img src="./img/shop.png" class="imgShop" alt="shop">
-            </div>  
+            </div>
         </section>
-        <section class="headerS2"> 
+        <section class="headerS2">
             <div class="ctPrincipal">
                 <img src="img/principalCompleta.jpg" class="imgPrincipal" alt="principal">
                 <h1>tants caps tants barrets</h1>
@@ -36,5 +36,10 @@
             </button>
         </section>
     </header>
+
+    <main>
+        <p>Hola</p>
+    </main>
 </body>
+
 </html>
