estructura html del catalogo y link del button inicio con el main

--- a/index.html
+++ b/index.html
@@ -30,14 +30,90 @@
                 <h1>tants caps tants barrets</h1>
             </div>
             <button class="buttonFlecha">
-                <a href="#">
+                <a href="#main">
                     <img src="./img/flecha.png" class="imgFlecha" alt="flecha">
                 </a>
             </button>
         </section>
     </header>
 
-    <main>
+    <main id="main">
+        <section class="ctCatalogo">
+            <p>Sombreros de Mujer</p>
+            <div class="cartSombrero">
+                <div class="imgSombrero">
+                    <img src="img/cordovan.jpg" alt="sombrero cordovan">
+                </div>
+                <div class="textoSombrero">
+                    <p>Sombrero Cordovan</p>
+                    <p>89,00€</p>
+                </div>
+            </div>
+            <div class="cartSombrero">
+                <div class="imgSombrero">
+                    <img src="" alt="">
+                </div>
+                <div class="textoSombrero">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="cartSombrero">
+                <div class="imgSombrero">
+                    <img src="" alt="">
+                </div>
+                <div class="textoSombrero">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="cartSombrero">
+                <div class="imgSombrero">
+                    <img src="" alt="">
+                </div>
+                <div class="textoSombrero">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="cartSombrero">
+                <div class="imgSombrero">
+                    <img src="" alt="">
+                </div>
+                <div class="textoSombrero">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="cartSombrero">
+                <div class="imgSombrero">
+                    <img src="" alt="">
+                </div>
+                <div class="textoSombrero">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="cartSombrero">
+                <div class="imgSombrero">
+                    <img src="" alt="">
+                </div>
+                <div class="textoSombrero">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="cartSombrero">
+                <div class="imgSombrero">
+                    <img src="" alt="">
+                </div>
+                <div class="textoSombrero">
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+        </section>
+        <footer class="footerCatalogo"></footer>
         <p>Hola</p>
     </main>
 </body>
