descripcion, tallas y caracteristicas

--- a/index.html
+++ b/index.html
@@ -122,8 +122,36 @@
                 </div>
             </div>
         </section>
-        <footer class="footerCatalogo"></footer>
+        <article>
+            <div>
+                <img src="img/cerrar.svg" alt="cerrar" class="imgCerrar">
+                <h3>Sombrero Cordovan</h3>
+                <p class="txtDescripcion">Perfecto para bodas, celebraciones, fiestas, eventos o simplemente para protegerte del sol dando un toque de estilo a tu día a día. El canotier, gondolero o veneciano es un sombrero de copa recta y plana y ala corta, plana y rígida. Este canotier rígido unisex está fabricado con paja natural, luce una ancha cinta de color beige y dispone de badana de piel.</p>
+            </div>
+                <h3>Talla</h3>
+                <div class="ctTallas">
+                    <div>56</div>
+                    <div>57</div>
+                    <div>58</div>
+                    <div>59</div>
+                    <div>60</div>
+                    <div>61</div>
+                </div>
+             <div class="ctCaracteristics">
+                <p>Color: Paja</p>
+                <p>Medidas: Ala de 6,5cm y copa de 8cm</p>
+                <p>Marca: Graells</p>
+                <p>Modelo: Canotier Cordovan</p>
+                <p>Material: 100% paja</p>
+                <p>Estilo: Canotier</p>
+                <p>Género: para mujer</p>
+                <p>Características: cinta ancha color beige, badana de piel, copa recta y plana, ala corta, plana y rígida, ligero </p>
+             </div>      
+            </div>
+
+        </article>
         </main>
+        <footer class="footerCatalogo"></footer>
 </body>
 
 </html>
