--- a/index.html
+++ b/index.html
@@ -2,38 +2,38 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sombrerería Mil</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
         <section class="headerS1">
             <button class="buttonMenu">
-                <img src="./img/menu.png" class="imgMenu" alt="menu">
-            </button>
+          <img src="./img/menu.png" class="imgMenu" alt="menu" />
+        </button>
             <div>
-                <img src="./img/logo.png" class="imgLogo" alt="logo">
+                <img src="./img/logo.png" class="imgLogo" alt="logo" />
             </div>
             <div>
-                <img src="./img/search.png" class="imgSearch" alt="search">
-                <img src="./img/shop.png" class="imgShop" alt="shop">
+                <img src="./img/search.png" class="imgSearch" alt="search" />
+                <img src="./img/shop.png" class="imgShop" alt="shop" />
             </div>
         </section>
         <section class="headerS2">
             <div class="ctPrincipal">
-                <img src="img/principalCompleta.jpg" class="imgPrincipal" alt="principal">
+                <img src="img/principalCompleta.jpg" class="imgPrincipal" alt="principal" />
                 <h1>tants caps tants barrets</h1>
             </div>
             <button class="buttonFlecha">
-                <a href="#main">
-                    <img src="./img/flecha.png" class="imgFlecha" alt="flecha">
-                </a>
-            </button>
+          <a href="#main">
+            <img src="./img/flecha.png" class="imgFlecha" alt="flecha" />
+          </a>
+        </button>
         </section>
     </header>
 
@@ -42,7 +42,7 @@
         <section class="ctCatalogo">
             <div class="cartSombrero">
                 <div class="imgSombrero">
-                    <img src="img/cordovan.jpg" alt="sombrero cordovan">
+                    <img src="img/cordovan.jpg" alt="sombrero cordovan" />
                 </div>
                 <div class="textoSombrero">
                     <p>Sombrero Cordovan</p>
@@ -51,7 +51,7 @@
             </div>
             <div class="cartSombrero">
                 <div class="imgSombrero">
-                    <img src="img/maya.jpg" alt="sombrero maya">
+                    <img src="img/maya.jpg" alt="sombrero maya" />
                 </div>
                 <div class="textoSombrero">
                     <p>Sombrero Maya</p>
@@ -60,7 +60,7 @@
             </div>
             <div class="cartSombrero">
                 <div class="imgSombrero">
-                    <img src="img/dalila.jpg" alt="sombrero dalila">
+                    <img src="img/dalila.jpg" alt="sombrero dalila" />
                 </div>
                 <div class="textoSombrero">
                     <p>Sombrero Dalila</p>
@@ -69,7 +69,7 @@
             </div>
             <div class="cartSombrero">
                 <div class="imgSombrero">
-                    <img src="img/mitchell.jpg" alt="sombrero mitchell">
+                    <img src="img/mitchell.jpg" alt="sombrero mitchell" />
                 </div>
                 <div class="textoSombrero">
                     <p>Sombrero Mitchell</p>
@@ -78,7 +78,7 @@
             </div>
             <div class="cartSombrero">
                 <div class="imgSombrero">
-                    <img src="img/fedora.jpg" alt="sombrero fedora">
+                    <img src="img/fedora.jpg" alt="sombrero fedora" />
                 </div>
                 <div class="textoSombrero">
                     <p>Sombrero Fedora</p>
@@ -87,7 +87,7 @@
             </div>
             <div class="cartSombrero">
                 <div class="imgSombrero">
-                    <img src="img/lucia.jpg" alt="sombrero lucía">
+                    <img src="img/lucia.jpg" alt="sombrero lucía" />
                 </div>
                 <div class="textoSombrero">
                     <p>Sombrero Lucía</p>
@@ -96,7 +96,7 @@
             </div>
             <div class="cartSombrero">
                 <div class="imgSombrero">
-                    <img src="img/chevallier.jpg" alt="sombrero chevallier">
+                    <img src="img/chevallier.jpg" alt="sombrero chevallier" />
                 </div>
                 <div class="textoSombrero">
                     <p>Sombrero Chevallier</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="cartSombrero">
                 <div class="imgSombrero">
-                    <img src="img/pamela.jpg" alt="sombrero pamela">
+                    <img src="img/pamela.jpg" alt="sombrero pamela" />
                 </div>
                 <div class="textoSombrero">
                     <p>Sombrero Pamela</p>
@@ -114,7 +114,7 @@
             </div>
             <div class="cartSombrero">
                 <div class="imgSombrero">
-                    <img src="img/dalila.jpg" alt="sombrero joana">
+                    <img src="img/dalila.jpg" alt="sombrero joana" />
                 </div>
                 <div class="textoSombrero">
                     <p>Sombrero Joana</p>
@@ -123,7 +123,7 @@
             </div>
         </section>
         <footer class="footerCatalogo"></footer>
-        </main>
+    </main>
 </body>
 
 </html>
