--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
                 </div>
             </div>
         </section>
-        <article class="ctFicha">
+        <article class="ctFicha" style="display: none;">
             <div class="ctDescripcion">
-                <img src="img/cerrar.svg" alt="cerrar" class="imgCerrar">
+                <button class="btCerrar"><img src="img/cerrar.svg" alt="cerrar" class="imgCerrar"></button>
                 <h3>Sombrero Cordovan</h3>
                 <p class="txtDescripcion">Perfecto para bodas, celebraciones, fiestas, eventos o simplemente para protegerte del sol dando un toque de estilo a tu día a día. El canotier, gondolero o veneciano es un sombrero de copa recta y plana y ala corta, plana y rígida. Este
                     canotier rígido unisex está fabricado con paja natural, luce una ancha cinta de color beige y dispone de badana de piel.</p>
