--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main id="main">
         <h2>Sombreros de Mujer</h2>
         <section class="ctCatalogo">
-            <div class="cartSombrero">
+            <div class="cartSombrero" onclick="mostrarFicha()">
                 <div class="imgSombrero">
                     <img src="img/cordovan.jpg" alt="sombrero cordovan" />
                 </div>
@@ -122,9 +122,9 @@
                 </div>
             </div>
         </section>
-        <article class="ctFicha" style="display: none;">
+        <article class="ctFicha" style="display: none;" id="ctFicha">
             <div class="ctDescripcion">
-                <button class="btCerrar"><img src="img/cerrar.svg" alt="cerrar" class="imgCerrar"></button>
+                <button class="btCerrar"><img src="img/cerrar.svg" alt="cerrar" class="imgCerrar" onclick="cerrar()"></button>
                 <h3>Sombrero Cordovan</h3>
                 <p class="txtDescripcion">Perfecto para bodas, celebraciones, fiestas, eventos o simplemente para protegerte del sol dando un toque de estilo a tu día a día. El canotier, gondolero o veneciano es un sombrero de copa recta y plana y ala corta, plana y rígida. Este
                     canotier rígido unisex está fabricado con paja natural, luce una ancha cinta de color beige y dispone de badana de piel.</p>
@@ -153,6 +153,8 @@
         </article>
     </main>
     <footer class="footerCatalogo"></footer>
+
+    <script src="javascript.js"></script>
 </body>
 
 </html>
